Markup for output (LONG LINES, LONG SOURCE) html files for output design changes made in the rules.php file output-head.html and output-tail.html

--- a/css/index.css
+++ b/css/index.css
@@ -14,3 +14,14 @@ margin-bottom: 10px;
 	/* 	margin: 48%; */
 	
 }
+.max_lines{
+	color: red;
+}
+
+.code{
+	background: silver;
+}
+
+.long_source{
+	background: grey;
+}
