--- a/css/login.css
+++ b/css/login.css
@@ -15,6 +15,7 @@ a:hover, a:active, a:visited {
     width: 780px;
     margin: 0 auto;
     margin-top: 100px;
+    margin-bottom: 20px;
     padding: 10px;
     border: 1px solid #CCC;
     background-color: #EEE;
