--- a/css/prism.css
+++ b/css/prism.css
@@ -1,4 +1,4 @@
-/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript&plugins=line-highlight */
+/* http://prismjs.com/download.html?themes=prism&languages=clike+c+cpp&plugins=line-highlight */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -15,7 +15,7 @@ pre[class*="language-"] {
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
-	line-height: 1.5;
+	line-height: 18.1px;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
